Solved parsing problem shell commands